PP-12365 update operation ID
