# openapi/publicauth_spec.yaml
@@ -90,37 +90,9 @@ paths:
       summary: Updates the description of an existing dev token.
       tags:
       - Auth
-  /v1/frontend/auth/service/{serviceExternalId}/mode/{mode}/revoke-all:
-    delete:
-      operationId: revokeTokensForServiceAndMode
-      parameters:
-      - example: 7d19aff33f8948deb97ed16b2912dcd3
-        in: path
-        name: serviceExternalId
-        required: true
-        schema:
-          type: string
-      - in: path
-        name: mode
-        required: true
-        schema:
-          type: string
-          enum:
-          - LIVE
-          - TEST
-      responses:
-        default:
-          content:
-            '*/*': {}
-          description: default response
-      summary: "Revokes all tokens associated with a service and mode. It is not possible\
-        \ to tell whether the service actually exists (in connector), so this method\
-        \ currently does not return a 404."
-      tags:
-      - Auth
   /v1/frontend/auth/service/{serviceExternalId}/mode/{serviceMode}:
     delete:
-      operationId: revokeSingleToken_1
+      operationId: revokeSingleTokenByServiceAndMode
       parameters:
       - example: 7d19aff33f8948deb97ed16b2912dcd3
         in: path
@@ -205,6 +177,34 @@ paths:
         "422":
           description: Invalid or missing required parameters
       summary: Retrieves generated tokens for service and mode.
+      tags:
+      - Auth
+  /v1/frontend/auth/service/{serviceExternalId}/mode/{serviceMode}/revoke-all:
+    delete:
+      operationId: revokeTokensForServiceAndMode
+      parameters:
+      - example: 7d19aff33f8948deb97ed16b2912dcd3
+        in: path
+        name: serviceExternalId
+        required: true
+        schema:
+          type: string
+      - in: path
+        name: serviceMode
+        required: true
+        schema:
+          type: string
+          enum:
+          - LIVE
+          - TEST
+      responses:
+        default:
+          content:
+            '*/*': {}
+          description: default response
+      summary: "Revokes all tokens associated with a service and mode. It is not possible\
+        \ to tell whether the service actually exists (in connector), so this method\
+        \ currently does not return a 404."
       tags:
       - Auth
   '/v1/frontend/auth/service/{serviceExternalId}/mode/{serviceMode}/{tokenLink} ':
